--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,21 @@ repositories {
     maven {
         url 'https://jitpack.io'
     }
+
+    maven {
+        url = uri("https://maven.pkg.github.com/dew-org/common")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+            password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+        }
+    }
 }
 
 dependencies {
     kapt("io.micronaut:micronaut-http-validation")
     kapt("io.micronaut.security:micronaut-security-annotations")
 
-    implementation 'com.github.dew-org:common:v0.1.3'
+    implementation 'com.dew:common:0.1.4'
 
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
