feat: implement analytics

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,4 +3,6 @@ micronaut:
     name: analytics
   config-client:
     enabled: true
-consul.client.defaultZone: ${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}
+consul:
+  client:
+    default-zone: ${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}
