--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,47 @@
 micronaut:
+  application:
+    name: analytics
+    instance:
+      id: ${random.shortuuid}
+  config-client:
+    enabled: true
   security:
     authentication: bearer
     token:
       jwt:
         signatures:
-          secret:
-            generator:
-              secret: ${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne}
+          jwks:
+            auth0:
+              url: https://${AUTH0_DOMAIN}/.well-known/jwks.json
+        enabled: true
+        claims-validators:
+          audience: ${AUTH0_AUDIENCE}
+          issuer: https://${AUTH0_DOMAIN}/
+    endpoints:
+      oauth:
+        enabled: false
+      login:
+        enabled: false
+consul:
+  client:
+    config:
+      format: yaml
+    default-zone: ${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}
+    registration:
+      enabled: true
+      prefer-ip-address: true
+      health-path: /health
+      check:
+        http: true
+    health-check: true
 netty:
   default:
     allocator:
       max-order: 3
-consul.client.registration.enabled: true
+db:
+  name: 'analytics'
+  collection: 'analytics'
+endpoints:
+  health:
+    enabled: true
+    sensitive: false
